<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.ChititietkhachhangActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_main"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#7b7979"
        app:titleTextColor="@color/app_color"
        app:title="@string/Donhang">
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/back"
                android:textSize="20dp"
                android:text="@string/name"
                android:layout_width="90dp"
                android:layout_height="wrap_content" />
            <TextView

                android:textColor="@color/back"
                android:id="@+id/name_ct"
                android:textSize="20dp"
                android:hint="@string/namefull"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView

                android:textColor="@color/back"
                android:textSize="18dp"
                android:text="@string/phonne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/sdt_ct"

                android:textColor="@color/back"
                android:textSize="19dp"
                android:hint="@string/phonehine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView

                android:textColor="@color/back"
                android:textSize="20dp"
                android:text="@string/nameDAC"
                android:layout_width="90dp"
                android:layout_height="wrap_content" />
            <TextView

                android:textColor="@color/back"
                android:id="@+id/Dc_chitiet"
                android:textSize="20dp"
                android:hint="@string/vn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:textColor="@color/back"
                android:textSize="18dp"
                android:text="@string/namesp"
                android:layout_width="120dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tensp_ct"
                android:textSize="20dp"

                android:textColor="@color/back"
                android:hint="@string/namespfull"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="18dp"

                android:textColor="@color/back"
                android:text="@string/sls"
                android:layout_width="120dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/sl_ct"
                android:textSize="20dp"
                android:hint="@string/sl"

                android:textColor="@color/back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView

                android:textColor="@color/back"
                android:textSize="18dp"
                android:text="@string/gia"
                android:layout_width="120dp"
                android:layout_height="wrap_content" />
            <TextView

                android:textColor="@color/back"
                android:id="@+id/gia_ct"
                android:textSize="20dp"
                android:hint="@string/giathanh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>