<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.ChatActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_chat"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#7b7979"
        app:title="Chating">
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/name_chat"
                android:hint="@string/createname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/signin_chat"
                android:layout_gravity="center"
                android:text="@string/btn_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ListView


                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/signin_chat"
                android:id="@+id/list_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/name_chating"
                android:hint="@string/createinformationchating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/signin_chating"
                android:layout_gravity="center"
                android:text="@string/btn_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ListView
                android:id="@+id/list_chating"
                android:layout_width="wrap_content"
                android:layout_height="273dp"
                android:layout_below="@+id/signin_chat"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>