<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.DangkyActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/ll_signin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">



                <ImageView
                    android:id="@+id/imgtest"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/express" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_usernameLogin"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/edittext"
                        android:drawableLeft="@drawable/ic_person_black_24dp"
                        android:hint="@string/namelg"
                        android:textColor="#111"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/et_passLogin"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edittext"
                        android:drawableLeft="@drawable/password"
                        android:hint="@string/namelog"
                        android:password="true"
                        android:textColor="#111"
                        android:textSize="15dp" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">
                        <Button
                            android:id="@+id/btn_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/buttoncolor"
                            android:text="@string/LoginAccount"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </LinearLayout>
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
